--- a/nextflow.config
+++ b/nextflow.config
@@ -1,1 +1,9 @@
 process.container = 'quay.io/nextflow/bash'
+
+google { 
+ project = "cx-test-environment"   
+ batch {    
+network = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/global/networks/test-network"    
+subnetwork = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/regions/us-east1/subnetworks/test-network"  
+  }
+}
