--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 process.container = 'quay.io/nextflow/bash'
 
 google { 
- project = "cx-test-environment"   
+ project = "cx-support-ticket-3825"   
  batch {    
 network = "https://www.googleapis.com/compute/v1/projects/cx-support-ticket-3825/global/networks/test-network"    
 subnetwork = "https://www.googleapis.com/compute/v1/projects/cx-support-ticket-3825/regions/us-east1/subnetworks/test-network"  
