--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,9 @@
 process.container = 'quay.io/nextflow/bash'
 
 google { 
- project = "cx-support-ticket-3825"   
+ project = "cx-test-environment"   
  batch {    
-network = "https://www.googleapis.com/compute/v1/projects/cx-support-ticket-3825/global/networks/test-network"    
-subnetwork = "https://www.googleapis.com/compute/v1/projects/cx-support-ticket-3825/regions/us-east1/subnetworks/test-networksub"  
+network = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/global/networks/default"    
+subnetwork = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/regions/us-east1/subnetworks/default"  
   }
 }
