--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,3 @@
+NXF_VER=20.04.0
 process.container = 'quay.io/nextflow/bash'
 
-google { 
- project = "cx-test-environment"   
- batch {    
-network = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/global/networks/default"    
-subnetwork = "https://www.googleapis.com/compute/v1/projects/cx-test-environment/regions/us-east1/subnetworks/default"  
-  }
-}
