--- a/nextflow.config
+++ b/nextflow.config
@@ -1,2 +1,14 @@
-process.container = 'quay.io/nextflow/bash'
+profiles {
+    docker {
+        docker {
+            enabled = true
+            fixOwnership = true
+        }
+
+        process {
+            container = 'quay.io/nextflow/bash'
+        }
+
+    }
+}
 
