--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,10 @@ profiles {
             container = 'quay.io/nextflow/bash'
         }
 
+        weblog {
+            enabled = true
+            url = http://localhost:8000
+        }
+
     }
 }
-
