--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,8 @@
 process {
     container = 'quay.io/nextflow/bash'
-        }
+}
 
- weblog {
+weblog {
     enabled = true
-    url = http://localhost:8000
-        }
-
-    }
+    url = 'http://localhost:8000'
 }
